src/main/gen/io/septimalmind/baboon/baboonintellij/language/BaboonParser.java
// This is a generated file. Not intended for manual editing.
package io.septimalmind.baboon.baboonintellij.language;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.septimalmind.baboon.baboonintellij.psi.BaboonTypes.*;
import static io.septimalmind.baboon.baboonintellij.language.parser.BaboonParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class BaboonParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return file(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // KW_ADT class_name member_meta? (LBRACE adt_member* RBRACE | LPAREN adt_member* RPAREN)
  public static boolean adt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt")) return false;
    if (!nextTokenIs(builder_, KW_ADT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, KW_ADT);
    result_ = result_ && class_name(builder_, level_ + 1);
    result_ = result_ && adt_2(builder_, level_ + 1);
    result_ = result_ && adt_3(builder_, level_ + 1);
    exit_section_(builder_, marker_, ADT, result_);
    return result_;
  }

  // member_meta?
  private static boolean adt_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_2")) return false;
    member_meta(builder_, level_ + 1);
    return true;
  }

  // LBRACE adt_member* RBRACE | LPAREN adt_member* RPAREN
  private static boolean adt_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_3")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = adt_3_0(builder_, level_ + 1);
    if (!result_) result_ = adt_3_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // LBRACE adt_member* RBRACE
  private static boolean adt_3_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_3_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LBRACE);
    result_ = result_ && adt_3_0_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RBRACE);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // adt_member*
  private static boolean adt_3_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_3_0_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!adt_member(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "adt_3_0_1", pos_)) break;
    }
    return true;
  }

  // LPAREN adt_member* RPAREN
  private static boolean adt_3_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_3_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LPAREN);
    result_ = result_ && adt_3_1_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RPAREN);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // adt_member*
  private static boolean adt_3_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_3_1_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!adt_member(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "adt_3_1_1", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // KW_ADT IDENTIFIER (LBRACE dto_member* RBRACE | LPAREN dto_member* RPAREN)
  public static boolean adt_in_service(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_in_service")) return false;
    if (!nextTokenIs(builder_, KW_ADT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, KW_ADT, IDENTIFIER);
    result_ = result_ && adt_in_service_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, ADT_IN_SERVICE, result_);
    return result_;
  }

  // LBRACE dto_member* RBRACE | LPAREN dto_member* RPAREN
  private static boolean adt_in_service_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_in_service_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = adt_in_service_2_0(builder_, level_ + 1);
    if (!result_) result_ = adt_in_service_2_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // LBRACE dto_member* RBRACE
  private static boolean adt_in_service_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_in_service_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LBRACE);
    result_ = result_ && adt_in_service_2_0_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RBRACE);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // dto_member*
  private static boolean adt_in_service_2_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_in_service_2_0_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!dto_member(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "adt_in_service_2_0_1", pos_)) break;
    }
    return true;
  }

  // LPAREN dto_member* RPAREN
  private static boolean adt_in_service_2_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_in_service_2_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LPAREN);
    result_ = result_ && adt_in_service_2_1_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RPAREN);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // dto_member*
  private static boolean adt_in_service_2_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_in_service_2_1_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!dto_member(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "adt_in_service_2_1_1", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // (dto | contract) | extended_contract_def | extraction_def
  public static boolean adt_member(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_member")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ADT_MEMBER, "<adt member>");
    result_ = adt_member_0(builder_, level_ + 1);
    if (!result_) result_ = extended_contract_def(builder_, level_ + 1);
    if (!result_) result_ = extraction_def(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // dto | contract
  private static boolean adt_member_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "adt_member_0")) return false;
    boolean result_;
    result_ = dto(builder_, level_ + 1);
    if (!result_) result_ = contract(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // KW_CHOICE class_name member_meta? (LBRACE choice_member* RBRACE | LPAREN choice_member* RPAREN)
  public static boolean choice(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice")) return false;
    if (!nextTokenIs(builder_, KW_CHOICE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, KW_CHOICE);
    result_ = result_ && class_name(builder_, level_ + 1);
    result_ = result_ && choice_2(builder_, level_ + 1);
    result_ = result_ && choice_3(builder_, level_ + 1);
    exit_section_(builder_, marker_, CHOICE, result_);
    return result_;
  }

  // member_meta?
  private static boolean choice_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_2")) return false;
    member_meta(builder_, level_ + 1);
    return true;
  }

  // LBRACE choice_member* RBRACE | LPAREN choice_member* RPAREN
  private static boolean choice_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_3")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = choice_3_0(builder_, level_ + 1);
    if (!result_) result_ = choice_3_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // LBRACE choice_member* RBRACE
  private static boolean choice_3_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_3_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LBRACE);
    result_ = result_ && choice_3_0_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RBRACE);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // choice_member*
  private static boolean choice_3_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_3_0_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!choice_member(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "choice_3_0_1", pos_)) break;
    }
    return true;
  }

  // LPAREN choice_member* RPAREN
  private static boolean choice_3_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_3_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LPAREN);
    result_ = result_ && choice_3_1_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RPAREN);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // choice_member*
  private static boolean choice_3_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_3_1_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!choice_member(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "choice_3_1_1", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // KW_CHOICE IDENTIFIER (LBRACE choice_member* RBRACE | LPAREN choice_member* RPAREN)
  public static boolean choice_in_service(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_in_service")) return false;
    if (!nextTokenIs(builder_, KW_CHOICE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, KW_CHOICE, IDENTIFIER);
    result_ = result_ && choice_in_service_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, CHOICE_IN_SERVICE, result_);
    return result_;
  }

  // LBRACE choice_member* RBRACE | LPAREN choice_member* RPAREN
  private static boolean choice_in_service_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_in_service_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = choice_in_service_2_0(builder_, level_ + 1);
    if (!result_) result_ = choice_in_service_2_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // LBRACE choice_member* RBRACE
  private static boolean choice_in_service_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_in_service_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LBRACE);
    result_ = result_ && choice_in_service_2_0_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RBRACE);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // choice_member*
  private static boolean choice_in_service_2_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_in_service_2_0_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!choice_member(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "choice_in_service_2_0_1", pos_)) break;
    }
    return true;
  }

  // LPAREN choice_member* RPAREN
  private static boolean choice_in_service_2_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_in_service_2_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LPAREN);
    result_ = result_ && choice_in_service_2_1_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RPAREN);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // choice_member*
  private static boolean choice_in_service_2_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_in_service_2_1_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!choice_member(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "choice_in_service_2_1_1", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER choice_value? choice_member_rename?
  public static boolean choice_member(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_member")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    result_ = result_ && choice_member_1(builder_, level_ + 1);
    result_ = result_ && choice_member_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, CHOICE_MEMBER, result_);
    return result_;
  }

  // choice_value?
  private static boolean choice_member_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_member_1")) return false;
    choice_value(builder_, level_ + 1);
    return true;
  }

  // choice_member_rename?
  private static boolean choice_member_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_member_2")) return false;
    choice_member_rename(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // COLON KW_WAS LBRACK IDENTIFIER RBRACK
  public static boolean choice_member_rename(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_member_rename")) return false;
    if (!nextTokenIs(builder_, COLON)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, COLON, KW_WAS, LBRACK, IDENTIFIER, RBRACK);
    exit_section_(builder_, marker_, CHOICE_MEMBER_RENAME, result_);
    return result_;
  }

  /* ********************************************************** */
  // EQUAL (DECIMAL | NEGATIVE_DECIMAL)
  public static boolean choice_value(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_value")) return false;
    if (!nextTokenIs(builder_, EQUAL)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, EQUAL);
    result_ = result_ && choice_value_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, CHOICE_VALUE, result_);
    return result_;
  }

  // DECIMAL | NEGATIVE_DECIMAL
  private static boolean choice_value_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "choice_value_1")) return false;
    boolean result_;
    result_ = consumeToken(builder_, DECIMAL);
    if (!result_) result_ = consumeToken(builder_, NEGATIVE_DECIMAL);
    return result_;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean class_name(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "class_name")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    exit_section_(builder_, marker_, CLASS_NAME, result_);
    return result_;
  }

  /* ********************************************************** */
  // IDENTIFIER (DOT IDENTIFIER)*
  public static boolean class_type(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "class_type")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    result_ = result_ && class_type_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, CLASS_TYPE, result_);
    return result_;
  }

  // (DOT IDENTIFIER)*
  private static boolean class_type_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "class_type_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!class_type_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "class_type_1", pos_)) break;
    }
    return true;
  }

  // DOT IDENTIFIER
  private static boolean class_type_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "class_type_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, DOT, IDENTIFIER);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // include+ | include* member+
  public static boolean content(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "content")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CONTENT, "<content>");
    result_ = content_0(builder_, level_ + 1);
    if (!result_) result_ = content_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // include+
  private static boolean content_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "content_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = include(builder_, level_ + 1);
    while (result_) {
      int pos_ = current_position_(builder_);
      if (!include(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "content_0", pos_)) break;
    }
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // include* member+
  private static boolean content_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "content_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = content_1_0(builder_, level_ + 1);
    result_ = result_ && content_1_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // include*
  private static boolean content_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "content_1_0")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!include(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "content_1_0", pos_)) break;
    }
    return true;
  }

  // member+
  private static boolean content_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "content_1_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = member(builder_, level_ + 1);
    while (result_) {
      int pos_ = current_position_(builder_);
      if (!member(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "content_1_1", pos_)) break;
    }
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // KW_CONTRACT class_name (LBRACE dto_member* RBRACE | LPAREN dto_member* RPAREN)
  public static boolean contract(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "contract")) return false;
    if (!nextTokenIs(builder_, KW_CONTRACT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, KW_CONTRACT);
    result_ = result_ && class_name(builder_, level_ + 1);
    result_ = result_ && contract_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, CONTRACT, result_);
    return result_;
  }

  // LBRACE dto_member* RBRACE | LPAREN dto_member* RPAREN
  private static boolean contract_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "contract_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = contract_2_0(builder_, level_ + 1);
    if (!result_) result_ = contract_2_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // LBRACE dto_member* RBRACE
  private static boolean contract_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "contract_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LBRACE);
    result_ = result_ && contract_2_0_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RBRACE);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // dto_member*
  private static boolean contract_2_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "contract_2_0_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!dto_member(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "contract_2_0_1", pos_)) break;
    }
    return true;
  }

  // LPAREN dto_member* RPAREN
  private static boolean contract_2_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "contract_2_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LPAREN);
    result_ = result_ && contract_2_1_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RPAREN);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // dto_member*
  private static boolean contract_2_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "contract_2_1_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!dto_member(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "contract_2_1_1", pos_)) break;
    }
    return true;
  }
